[gd_scene load_steps=5 format=3 uid="uid://cmf4byo7fv3jd"]

[ext_resource type="Texture2D" uid="uid://bxxycwk4l4a7p" path="res://Assets/Sprites/UI/food/dirty dish.png" id="1_850yx"]
[ext_resource type="Script" path="res://Scripts/Plate.gd" id="1_ma5v5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4ii0x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_850yx")
}],
"loop": true,
"name": &"dirty",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tyco1"]
radius = 20.5
height = 41.0

[node name="Plate" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_ma5v5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4ii0x")
animation = &"dirty"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_tyco1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
